toolings/templates/gradio/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gradio-app
  labels:
    app: gradio-app
spec:
  type: ClusterIP
  ports:
  - port: 7860
    targetPort: 7860
    protocol: TCP
    name: http
  selector:
    app: gradio-app
