toolings/templates/gradio/route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: gradio-app
spec:
  path: /
  to:
    kind: Service
    name: gradio-app
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
